--- a/GMI-angular/src/app/common/sidebar/sidebar.component.html
+++ b/GMI-angular/src/app/common/sidebar/sidebar.component.html
@@ -110,6 +110,16 @@
                         </span>
                     </a>
                 </div>
+                  <div class="accordion-item rounded-md text-black dark:text-white mb-[5px] whitespace-nowrap">
+                    <a routerLink="/dashboard/matriel-manquants" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" class="accordion-button flex items-center transition-all py-[9px] ltr:pl-[14px] ltr:pr-[30px] rtl:pr-[14px] rtl:pl-[30px] rounded-md font-medium w-full relative hover:bg-gray-50 text-left dark:hover:bg-[#15203c]">
+                        <i class="material-symbols-outlined transition-all text-gray-500 dark:text-gray-400 ltr:mr-[7px] rtl:ml-[7px] !text-[22px] leading-none relative -top-px">
+                            account_circle
+                        </i>
+                        <span class="title leading-none">
+                            Matériels manquants
+                        </span>
+                    </a>
+                </div>
                 <div class="accordion-item rounded-md text-black dark:text-white mb-[5px] whitespace-nowrap" *ngIf="!isAdmin">
                     <button
                         class="accordion-button toggle flex items-center transition-all py-[9px] ltr:pl-[14px] ltr:pr-[30px] rtl:pr-[14px] rtl:pl-[30px] rounded-md font-medium w-full relative hover:bg-gray-50 text-left dark:hover:bg-[#15203c]"
