--- a/GMI-angular/src/app/dashboard/hospital/patient-appointments/patient-appointments.component.html
+++ b/GMI-angular/src/app/dashboard/hospital/patient-appointments/patient-appointments.component.html
@@ -24,6 +24,8 @@
       <th scope="col">Téléphone</th>
       <th scope="col">Adresse</th>
       <th scope="col">CIN</th>
+
+      <th scope="col">IBAN</th>
       <th scope="col">Action</th>
 
     </tr>
@@ -37,6 +39,8 @@
       <td>{{u?.tel}}</td>
       <td>{{u?.adresse}}</td>
       <td>{{u?.cin}}</td>
+      <td>{{u?.iban}}</td>
+
       <td class="font-medium text-gray-500 dark:text-gray-400 ltr:text-right rtl:text-left whitespace-nowrap px-[14px] py-[6px] border-b border-gray-100 dark:border-[#172036]">
                             <button class="text-blue-500 hover:text-blue-700" (click)="editUser(u)">
                                 <i class="ri-pencil-line"></i> Modifier
@@ -57,7 +61,7 @@
 <div *ngIf="isModalOpen" class="modal-overlay" (click)="closeModal()">
   <div class="modal-content" (click)="$event.stopPropagation()">
     <h2>Modifier l'utilisateur</h2>
-    <form (ngSubmit)="saveUser()">
+    <form >
       <label>Nom:</label>
       <input type="text" [(ngModel)]="selectedUser.nom" name="nom" required />
       
@@ -78,7 +82,10 @@
       
       <label>CIN:</label>
       <input type="text" [(ngModel)]="selectedUser.cin" name="cin" required />
-      
+   
+         <label>IBAN:</label>
+      <input type="number" [(ngModel)]="selectedUser.iban" name="iban" required />
+   
       <button type="submit" (click)="update()">Sauvegarder</button>
       <button type="button" (click)="closeModal()">Fermer</button>
     </form>
@@ -110,7 +117,9 @@
         <input type="text" [(ngModel)]="newUser.adresse" name="adresse" placeholder="Adresse" required />
         <input type="number" [(ngModel)]="newUser.tel" name="tel" placeholder="Tel" required />
         <input type="number" [(ngModel)]="newUser.cin" name="cin" placeholder="CIN" required />
-         <select [(ngModel)]="newUser.p" name="p" class="form-control mb-2">
+        <input type="number" [(ngModel)]="newUser.iban" name="iban" placeholder="IBAN" required />
+
+        <select [(ngModel)]="newUser.p" name="p" class="form-control mb-2">
             <option value="CHEF_PROJET">CHEF_PROJET</option>
             <option value="EMPLOYE">EMPLOYE</option>
                         <option value="TECHNICIEN">TECHNICIEN</option>
