--- a/GMI-angular/src/app/common/footer/footer.component.html
+++ b/GMI-angular/src/app/common/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class="bg-white dark:bg-[#0c1427] rounded-t-md px-[20px] md:px-[25px] py-[15px] md:py-[20px] text-center">
     <p>
-        © <span class="text-purple-500">Trezo</span> is Proudly Owned by <a href="https://envytheme.com/" target="_blank" class="text-primary-500 transition-all hover:underline">EnvyTheme</a>
+        © <span class="text-black"> E-TRACK </span> by Elco Solutions 
     </p>
 </footer>
