gestion materiel / intervention

--- a/GMI-angular/src/app/common/sidebar/sidebar.component.html
+++ b/GMI-angular/src/app/common/sidebar/sidebar.component.html
@@ -57,12 +57,35 @@
                     </div>
                 </div> -->
                 <div class="accordion-item rounded-md text-black dark:text-white mb-[5px] whitespace-nowrap">
-                    <a routerLink="/dashboard/gestion-user" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" class="accordion-button flex items-center transition-all py-[9px] ltr:pl-[14px] ltr:pr-[30px] rtl:pr-[14px] rtl:pl-[30px] rounded-md font-medium w-full relative text-left dark:hover:bg-[#15203c] hover:bg-[#ebf0f5]">
+                    <a routerLink="/dashboard/gestion-user" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" 
+                        class="accordion-button flex items-center transition-all py-[9px] ltr:pl-[14px] ltr:pr-[30px] rtl:pr-[14px] rtl:pl-[30px] rounded-md font-medium w-full relative text-left dark:hover:bg-[#15203c] hover:bg-[#ebf0f5]">
                         <i class="material-symbols-outlined transition-all text-gray-500 dark:text-gray-400 ltr:mr-[7px] rtl:ml-[7px] !text-[22px] leading-none relative -top-px">
                             account_circle
                         </i>
                         <span class="title leading-none">
                             Gestion Utilisateur
+                        </span>
+                    </a>
+                </div>
+                 <div class="accordion-item rounded-md text-black dark:text-white mb-[5px] whitespace-nowrap">
+                    <a routerLink="/dashboard/gestion-materiel" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" 
+                        class="accordion-button flex items-center transition-all py-[9px] ltr:pl-[14px] ltr:pr-[30px] rtl:pr-[14px] rtl:pl-[30px] rounded-md font-medium w-full relative text-left dark:hover:bg-[#15203c] hover:bg-[#ebf0f5]">
+                        <i class="material-symbols-outlined transition-all text-gray-500 dark:text-gray-400 ltr:mr-[7px] rtl:ml-[7px] !text-[22px] leading-none relative -top-px">
+                            account_circle
+                        </i>
+                        <span class="title leading-none">
+                            Gestion Materiel
+                        </span>
+                    </a>
+                </div>
+                <div class="accordion-item rounded-md text-black dark:text-white mb-[5px] whitespace-nowrap">
+                    <a routerLink="/dashboard/gestion-intervention" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" 
+                        class="accordion-button flex items-center transition-all py-[9px] ltr:pl-[14px] ltr:pr-[30px] rtl:pr-[14px] rtl:pl-[30px] rounded-md font-medium w-full relative text-left dark:hover:bg-[#15203c] hover:bg-[#ebf0f5]">
+                        <i class="material-symbols-outlined transition-all text-gray-500 dark:text-gray-400 ltr:mr-[7px] rtl:ml-[7px] !text-[22px] leading-none relative -top-px">
+                            account_circle
+                        </i>
+                        <span class="title leading-none">
+                            Gestion Interventions
                         </span>
                     </a>
                 </div>
